--- a/samba/userdb.html
+++ b/samba/userdb.html
@@ -122,7 +122,7 @@ span.psw {
 <h2>Samba user Manager</h2>
 
 <div>
-    <p style="text-color: %%COLOR%%;">%%MESSAGE%%</p>
+    <p style="color: %%COLOR%%;">%%MESSAGE%%</p>
 </div>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sync User</button>
