--- a/deconz/rootfs/usr/share/www/ingress.html
+++ b/deconz/rootfs/usr/share/www/ingress.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Home Assistant add-on deCONZ</h2>
+<h2>Zigbee network by Dresden Elektronik</h2>
 <p>You can use the webui Phoscon or the VNC based deCONZ</p>
 
 <div>
